<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorDialogBackground"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="10dp"
        android:paddingTop="16dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/colorPrimaryVariant">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_text"
            android:layout_marginEnd="10dp"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/colorText" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_gravity="end">
            <Button
                android:id="@+id/reset_no_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_no"
                style="@style/PerfectTextButton"/>
            <Button
                android:id="@+id/reset_yes_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_yes"
                style="@style/PerfectTextButton"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>