<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:padding="32dp"
    tools:background="@color/colorPrimaryVariant">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/feedback_text"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/colorText" />

        <View
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@color/colorSeparator"/>

        <LinearLayout
            android:id="@+id/feedback_vk_layout"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="bottom"
                android:src="@drawable/ic_feedback_vk"
                android:tint="@color/colorPrimary"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback_vk"
                android:textColor="@color/colorText"
                android:layout_marginStart="10dp"
                style="@style/TextAppearance.MaterialComponents.Headline6"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/feedback_mail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            android:padding="10dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="bottom"
                android:src="@drawable/ic_feedback_mail"
                android:tint="@color/colorPrimary"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback_mail"
                android:textColor="@color/colorText"
                android:layout_marginStart="10dp"
                style="@style/TextAppearance.MaterialComponents.Headline6"/>
        </LinearLayout>

<!--        <Button-->
<!--            android:id="@+id/feedback_close_btn"-->
<!--            style="@style/PerfectTextButton"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="end"-->
<!--            android:text="@string/how_to_play_close"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent" />-->

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>