<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.constraintlayout.widget.ConstraintLayout-->
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="400dp"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:padding="16dp">-->

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        tools:background="@color/colorPrimaryVariant">-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal">-->
<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/help_text"-->
<!--                style="@style/TextAppearance.MaterialComponents.Subtitle1"-->
<!--                android:textColor="@color/colorText" />-->

<!--            <TextView-->
<!--                android:id="@+id/help_price_label"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:textColor="@color/colorText"-->
<!--                android:layout_marginStart="5dp"-->
<!--                android:layout_marginEnd="3dp"-->
<!--                style="@style/TextAppearance.MaterialComponents.Subtitle1"-->
<!--                tools:text="700"/>-->

<!--            <ImageView-->
<!--                android:layout_width="16dp"-->
<!--                android:layout_height="16dp"-->
<!--                android:layout_gravity="center_vertical"-->
<!--                android:src="@drawable/ic_puzzle_piece"/>-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                style="@style/TextAppearance.MaterialComponents.Subtitle1"-->
<!--                android:text="@string/help_secondary_text"-->
<!--                android:textColor="@color/colorText" />-->

<!--        </LinearLayout>-->

<!--        <LinearLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_gravity="end">-->
<!--            <Button-->
<!--                android:id="@+id/help_no_btn"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/help_no"-->
<!--                style="@style/PerfectTextButton"/>-->
<!--            <Button-->
<!--                android:id="@+id/help_yes_btn"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/help_yes"-->
<!--                style="@style/PerfectTextButton"/>-->
<!--        </LinearLayout>-->

<!--    </LinearLayout>-->

<!--</androidx.constraintlayout.widget.ConstraintLayout>-->


<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:background="@color/colorPrimaryVariant">


        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_text"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/help_price_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="3dp"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                tools:text="700"/>

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginEnd="3dp"
                android:alpha=".8"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_puzzle_piece"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:text="@string/help_secondary_text"
                android:textColor="@color/colorText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:layout_gravity="end|bottom">
            <Button
                android:id="@+id/help_no_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_no"
                style="@style/PerfectTextButton"/>
            <Button
                android:id="@+id/help_yes_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_yes"
                style="@style/PerfectTextButton"/>
        </LinearLayout>


</FrameLayout>